# Backend

./: .gitignore  .gitmodules  test.cpp
DatabaseManager/src/: main.cpp
src/database/: CMakeLists.txt  build.sh
src/database/include/: database.hpp
src/database/src/: core.cpp  core.hpp  database.cpp  main.cpp  note_folder_classes.cpp  notes.hpp
src/database/tests/: CMakeLists.txt  main.cpp  test_database.cpp
